Fixed overflow

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -38,13 +38,13 @@
 
     .app {
         width: 100%;
-        height: 100%;
+        height: 100dvh;
         background-color: rgba(36, 36, 36, 0.9);
         border-radius: 0px;
         border: none;
         box-shadow: none;
-        transition: transform 0.3s ease-in-out;
-        height: 100dvh;
+        display: flex;
+        flex-direction: column;
     }
 
     .box-image {
@@ -56,7 +56,7 @@
 
     .content {
         max-height: none;
-        overflow-y: visible;  
+        overflow-y: auto;
     }
 
     .full-image {
